--- a/bookfe/src/views/auth/index.scss
+++ b/bookfe/src/views/auth/index.scss
@@ -5,24 +5,28 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background-image:url("https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg") ;
+      background-image:url("../../../public/bg4.png") ;
       background-repeat: no-repeat;
       background-size: cover;
       background-position:center center ;
+      z-index: -1;
    }
    .title{
+      
       display: flex;
       align-items: center;
       justify-content: center;
       margin-top: 100px;
       text-align: center;
       font-size: 20px;
+      z-index: 1;
       img{
          width: 80px;
          height: 80px;
       }
       h2{
          padding-top: 3px;
+         color: #D9D919;
          margin-left: 16px;
       }
    }
