--- a/bookfe/src/layout/BasiclLayout/index.scss
+++ b/bookfe/src/layout/BasiclLayout/index.scss
@@ -56,8 +56,10 @@
          bottom: 0;
       }
       .right{
+
          flex: 1;
          padding: 24px;
+         padding-left: 256+24px;
       }
    }
 }
